# soralog

./: CMakeLists.txt  conanfile.txt
cmake/: dependencies.cmake  soralogConfig.cmake.in
conan/: CMakeLists.txt  conandata.yml  conanfile.py
conan/test_package/: CMakeLists.txt  test_package.cpp
src/: CMakeLists.txt
